--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/resources/demos/style.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="media.css">
 
 
 </head>
@@ -28,83 +29,102 @@
     <div class="container d-flex justify-between">
         <a class="logo" href="#"><img src="img/Logo.svg" alt="logo"> locus</a>
 
-        <nav>
-            <ul>
-                <li><a href="#">Home</a><span class="span"></span></li>
-                <li><a id="opener" href="#">Contact</a></li>
-                <li><a href="#">Location</a></li>
-                <li><a href="#">About Us</a></li>
-            </ul>
+        <nav role="navigation">
+            <div id="menuToggle">
+
+                <input type="checkbox" />
+
+
+                <span></span>
+                <span></span>
+                <span></span>
+
+                <ul id="menu">
+                    <li> <a href="#">Home</a> </li>
+                    <li> <a href="#">Contact</a></li>
+                    <li> <a href="#">Location</a></li>
+                    <li> <a href="#">About Us</a></li>
+
+                </ul>
+            </div>
         </nav>
+<!--        <nav>-->
+<!--            <ul>-->
+<!--                <li><a href="#">Home</a><span class="span"></span></li>-->
+<!--                <li><a id="opener" href="#">Contact</a></li>-->
+<!--                <li><a href="#">Location</a></li>-->
+<!--                <li><a href="#">About Us</a></li>-->
+<!--            </ul>-->
+<!--        </nav>-->
         <a class="button" href="#">Sign Up</a>
     </div>
 </header>
 
-<section class="interior-design ">
-    <div class="container d-flex">
-        <div class="box">
-            <h3>
-                Get the inspiration
-                of interior design
-                here
-            </h3>
-            <p>architecture not only about engineering, it even
-                lands to art and aesthetics. With us, you will get
-                a residentical design with an extraordinary touch
-                of art.</p>
-            <a href="#">Let’s go</a>
+<!--<section class="interior-design ">-->
+<!--    <div class="container d-flex">-->
+<!--        <div class="box">-->
+<!--            <h3>-->
+<!--                Get the inspiration-->
+<!--                of interior design-->
+<!--                here-->
+<!--            </h3>-->
+<!--            <p>architecture not only about engineering, it even-->
+<!--                lands to art and aesthetics. With us, you will get-->
+<!--                a residentical design with an extraordinary touch-->
+<!--                of art.</p>-->
+<!--            <a href="#">Let’s go</a>-->
 
 
-        </div>
-        <div class="img">
-            <img src="img/interior.png" alt="photo">
-        </div>
+<!--        </div>-->
+<!--        <div class="img">-->
+<!--            <img src="img/interior.png" alt="photo">-->
+<!--        </div>-->
 
-    </div>
-
-
-</section>
-
-<section class="works">
-    <h2>
-        How it works
-    </h2>
-
-    <h5>
-        Spice up your space even simpler<br>
-        than you think
-    </h5>
-    <div class="container d-flex position">
-<div class="spice">
-<img class="works-img" src="img/works.jpg" alt="works">
-</div>
-<div class="bcgr">
-
-    <p>
-        We provide design and build<br>
-        for commercial building,<br>
-        interior and furniture to improve
-        the better life.
-    </p>
-    <a href="#">S E E  V I D E O</a>
-</div>
-
-    </div>
-
-</section>
-<section>
-
-</section>
+<!--    </div>-->
 
 
-<script src="https://kit.fontawesome.com/9bb7cecad3.js" crossorigin="anonymous"></script>
-<script
-        src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-        crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-<script src="js/owl.carousel.js"></script>
-<script src="js/scripts.js"></script>
+<!--</section>-->
 
-</body>
-</html>
+<!--<section class="works">-->
+<!--    <h2>-->
+<!--        How it works-->
+<!--    </h2>-->
+
+<!--    <h5>-->
+<!--        Spice up your space even simpler<br>-->
+<!--        than you think-->
+<!--    </h5>-->
+<!--    <div class="container d-flex position">-->
+<!--<div class="spice">-->
+<!--<img class="works-img" src="img/works.jpg" alt="works">-->
+<!--</div>-->
+<!--<div class="bcgr">-->
+
+<!--    <p>-->
+<!--        We provide design and build<br>-->
+<!--        for commercial building,<br>-->
+<!--        interior and furniture to improve-->
+<!--        the better life.-->
+<!--    </p>-->
+<!--    <a href="#">S E E  V I D E O</a>-->
+<!--</div>-->
+
+<!--    </div>-->
+
+<!--</section>-->
+<!--<section>-->
+
+<!--</section>-->
+
+
+<!--<script src="https://kit.fontawesome.com/9bb7cecad3.js" crossorigin="anonymous"></script>-->
+<!--<script-->
+<!--        src="https://code.jquery.com/jquery-3.6.0.min.js"-->
+<!--        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="-->
+<!--        crossorigin="anonymous"></script>-->
+<!--<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>-->
+<!--<script src="js/owl.carousel.js"></script>-->
+<!--<script src="js/scripts.js"></script>-->
+
+<!--</body>-->
+<!--</html>-->
